traces/bug_680.txt
src/femlib/fem.cpp:1195: error: DEAD_STORE
  The value written to &pk (type int) is never used.
Showing all 1 steps of the trace


src/femlib/fem.cpp:1195:5: Write of unused value
1193.   	// Brute force .... bof bof ...
1194.       double ddp=1e100;
1195.       int pk=-1;
            ^
1196.     
1197.       for(int k=0;k<nt;++k)
